Toolbar collapse-toggle duplicate possible fix

--- a/src/components/toolbar/ToolbarView.scss
+++ b/src/components/toolbar/ToolbarView.scss
@@ -19,6 +19,7 @@
 
     .toolbar-left-collapse {
         background-image: url(../../assets/flash/toolbar/collapse_left.png);
+        background-repeat: no-repeat;
         background-color: transparent;
         height: 43px;
         width: 14px;
@@ -30,6 +31,7 @@
 
     .toolbar-left-collapse-active {
         background-image: url(../../assets/flash/toolbar/collapse_left_active.png);
+        background-repeat: no-repeat;
         background-color: transparent;
         height: 43px;
         width: 14px;
